pvaSrc/temp
make -C O.linux-x86_64 -f ../Makefile TOP=../.. T_A=linux-x86_64 install
make[1]: Entering directory `/home/epicsv4/pvAccessCPP/pvaSrc/O.linux-x86_64'

/usr/bin/g++ -c  -D_POSIX_C_SOURCE=199506L -D_POSIX_THREADS -D_XOPEN_SOURCE=500          -g -ggdb  -D_X86_64_  -DUNIX  -D_BSD_SOURCE -Dlinux  -D_REENTRANT   -O3 -g   -Wall      -m64     -fPIC -MMD -I. -I../O.Common -I. -I.. -I../../include/pv/os/Linux -I../../include/pv -I/home/install/epics/base/include/os/Linux -I/home/install/epics/base/include    -I/home/epicsv4/pvCommonCPP/include  -I/home/epicsv4/pvDataCPP/include  -I/home/epicsv4/pvAccessCPP/include  -I/home/epicsv4/pvaSrv/include  -I/home/epicsv4/normativeTypesCPP/include     -I../../include   ../pvaNTMultiChannel.cpp 
In file included from ../pvaNTMultiChannel.cpp:13:0:
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:75:5: error: ‘PVAMultiChannelPtr’ does not name a type
     PVAMultiChannelPtr getPVAMultiChannel();
     ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:78:28: error: expected ‘)’ before ‘const’
         PVAMultiChannelPtr const & channelName,
                            ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:83:5: error: ‘PVAMultiChannelPtr’ does not name a type
     PVAMultiChannelPtr pvaMultiChannel;
     ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:87:17: error: ‘PVAGetPtr’ was not declared in this scope
     std::vector<PVAGetPtr> pvaGet;
                 ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:87:26: error: template argument 1 is invalid
     std::vector<PVAGetPtr> pvaGet;
                          ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:87:26: error: template argument 2 is invalid
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:88:17: error: ‘PVAPutPtr’ was not declared in this scope
     std::vector<PVAPutPtr> pvaPut;
                 ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:88:26: error: template argument 1 is invalid
     std::vector<PVAPutPtr> pvaPut;
                          ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:88:26: error: template argument 2 is invalid
../pvaNTMultiChannel.cpp: In static member function ‘static epics::pva::PvaNTMultiChannelPtr epics::pva::PvaNTMultiChannel::create(const PvaPtr&, const PVStringArrayPtr&, const StructureConstPtr&, double, const string&)’:
../pvaNTMultiChannel.cpp:41:85: error: no matching function for call to ‘epics::pva::PvaNTMultiChannel::PvaNTMultiChannel(epics::pva::PvaMultiChannelPtr&, epics::nt::NTMultiChannelPtr&)’
     return PvaNTMultiChannelPtr(new PvaNTMultiChannel(pvaMultiChannel,ntMultiChannel));
                                                                                     ^
../pvaNTMultiChannel.cpp:41:85: note: candidates are:
In file included from ../pvaNTMultiChannel.cpp:13:0:
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:34:23: note: epics::pva::PvaNTMultiChannel::PvaNTMultiChannel()
 class epicsShareClass PvaNTMultiChannel 
                       ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:34:23: note:   candidate expects 0 arguments, 2 provided
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:34:23: note: epics::pva::PvaNTMultiChannel::PvaNTMultiChannel(const epics::pva::PvaNTMultiChannel&)
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:34:23: note:   candidate expects 1 argument, 2 provided
../pvaNTMultiChannel.cpp: At global scope:
../pvaNTMultiChannel.cpp:44:1: error: prototype for ‘epics::pva::PvaNTMultiChannel::PvaNTMultiChannel(const PvaMultiChannelPtr&, const NTMultiChannelPtr&)’ does not match any in class ‘epics::pva::PvaNTMultiChannel’
 PvaNTMultiChannel::PvaNTMultiChannel(
 ^
In file included from ../pvaNTMultiChannel.cpp:13:0:
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:34:23: error: candidates are: epics::pva::PvaNTMultiChannel::PvaNTMultiChannel(const epics::pva::PvaNTMultiChannel&)
 class epicsShareClass PvaNTMultiChannel 
                       ^
/home/epicsv4/pvAccessCPP/include/pv/pvaNTMultiChannel.h:34:23: error:                 epics::pva::PvaNTMultiChannel::PvaNTMultiChannel()
../pvaNTMultiChannel.cpp: In member function ‘void epics::pva::PvaNTMultiChannel::createGet()’:
../pvaNTMultiChannel.cpp:72:42: error: ‘pvaMultiChannel’ was not declared in this scope
     PvaChannelArrayPtr pvaChannelArray = pvaMultiChannel->getPvaChannelArray().lock();
                                          ^
../pvaNTMultiChannel.cpp:76:12: error: cannot convert ‘std::vector<std::tr1::shared_ptr<epics::pva::PvaGet> >’ to ‘int’ in assignment
     pvaGet = std::vector<PvaGetPtr>(numChannel,PvaGetPtr());
            ^
../pvaNTMultiChannel.cpp:81:17: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         pvaGet[i] = pvaChannels[i]->createGet(request);
                 ^
../pvaNTMultiChannel.cpp:82:17: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         pvaGet[i]->issueConnect();
                 ^
../pvaNTMultiChannel.cpp:86:34: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
          Status status = pvaGet[i]->waitConnect();
                                  ^
../pvaNTMultiChannel.cpp: In member function ‘void epics::pva::PvaNTMultiChannel::createPut()’:
../pvaNTMultiChannel.cpp:99:42: error: ‘pvaMultiChannel’ was not declared in this scope
     PvaChannelArrayPtr pvaChannelArray = pvaMultiChannel->getPvaChannelArray().lock();
                                          ^
../pvaNTMultiChannel.cpp:103:12: error: cannot convert ‘std::vector<std::tr1::shared_ptr<epics::pva::PvaPut> >’ to ‘int’ in assignment
     pvaPut = std::vector<PvaPutPtr>(numChannel,PvaPutPtr());
            ^
../pvaNTMultiChannel.cpp:108:17: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         pvaPut[i] = pvaChannels[i]->createPut("value");
                 ^
../pvaNTMultiChannel.cpp:109:17: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         pvaPut[i]->issueConnect();
                 ^
../pvaNTMultiChannel.cpp:113:34: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
          Status status = pvaPut[i]->waitConnect();
                                  ^
../pvaNTMultiChannel.cpp: In member function ‘epics::nt::NTMultiChannelPtr epics::pva::PvaNTMultiChannel::get()’:
../pvaNTMultiChannel.cpp:125:15: error: request for member ‘empty’ in ‘((epics::pva::PvaNTMultiChannel*)this)->epics::pva::PvaNTMultiChannel::pvaGet’, which is of non-class type ‘int’
     if(pvaGet.empty()) createGet();
               ^
../pvaNTMultiChannel.cpp:127:48: error: ‘pvaMultiChannel’ was not declared in this scope
     shared_vector<const string> channelNames = pvaMultiChannel->getChannelNames()->view();
                                                ^
../pvaNTMultiChannel.cpp:162:17: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         pvaGet[i]->issueGet();
                 ^
../pvaNTMultiChannel.cpp:166:31: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         Status stat = pvaGet[i]->waitGet();
                               ^
../pvaNTMultiChannel.cpp:171:46: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         PVStructurePtr pvStructure = pvaGet[i]->getData()->getPVStructure();
                                              ^
../pvaNTMultiChannel.cpp: In member function ‘void epics::pva::PvaNTMultiChannel::put(const NTMultiChannelPtr&)’:
../pvaNTMultiChannel.cpp:234:15: error: request for member ‘empty’ in ‘((epics::pva::PvaNTMultiChannel*)this)->epics::pva::PvaNTMultiChannel::pvaPut’, which is of non-class type ‘int’
     if(pvaPut.empty()) createPut();
               ^
../pvaNTMultiChannel.cpp:235:48: error: ‘pvaMultiChannel’ was not declared in this scope
     shared_vector<const string> channelNames = pvaMultiChannel->getChannelNames()->view();
                                                ^
../pvaNTMultiChannel.cpp:244:39: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
             PVFieldPtr pvTo = pvaPut[i]->getData()->getValue();
                                       ^
../pvaNTMultiChannel.cpp:252:21: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
             pvaPut[i]->issuePut();
                     ^
../pvaNTMultiChannel.cpp:260:33: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
         Status status = pvaPut[i]->waitPut();
                                 ^
../pvaNTMultiChannel.cpp: In static member function ‘static epics::pva::PvaNTMultiChannelPtr epics::pva::PvaNTMultiChannel::create(const PvaPtr&, const PVStringArrayPtr&, const StructureConstPtr&, double, const string&)’:
../pvaNTMultiChannel.cpp:42:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make[1]: *** [pvaNTMultiChannel.o] Error 1
make[1]: Leaving directory `/home/epicsv4/pvAccessCPP/pvaSrc/O.linux-x86_64'
make: *** [install.linux-x86_64] Error 2
